--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,23 @@
-p {
-font-family: cursive;
+* {
+ font-family: Arial;
+ font-size: 18px;
+}
+
+table {
+ border-collapse: collapse;
+ border: 1px solid black;
+ padding: 100px;
+}
+
+table tr td:first-child {
+    font-weight: bold;
+    background-color: #d3d3d3;
+}
+
+table tr td {
+ border: 1px solid black   
+}
+
+tr:nth-child(even) {
+    background-color: #d3d3d3;
 }
