--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ table {
 
 table tr td:first-child {
     font-weight: bold;
-    background-color: #d3d3d3;
+    background-color: #fffbff;
 }
 
 table tr td {
@@ -19,5 +19,5 @@ table tr td {
 }
 
 tr:nth-child(even) {
-    background-color: #d3d3d3;
+    background-color: #fffbff;
 }
